# incident-briefing-api

./: README.md  pyproject.toml
app/: models.py  repositories.py  schemas.py
app/api/: routes.py
app/core/: config.py
app/services/: ai.py  domain.py
docs/: INTERVIEW_GUIDE.md
tests/: test_health.py  test_workflow.py
